# waveband

./: .gitignore  .gitmodules  README.md  wak.toml
api/: README.md  example.py
api/auth/: main.py
api/js/: README.md  bun.lockb  package.json
api/js/src/: api.js
api/js/tests/: test.js
api/old/: README.md
api/old/js/: README.md
api/old/js/tests/: api.test.js
api/old/python/: LICENSE  pyproject.toml
api/old/python/src/waveband/: __init__.py  api.py
api/old/python/tests/: test_api.py
api/old/rtltcp/: README.md
api/old/rtltcp/src/: main.rs
api/old/rust/: Cargo.toml
api/python/: README.md  pyproject.toml
api/python/src/waveband/: __about__.py  api.py
api/python/tests/: __init__.py  test_api.py
api/rtltcp/: Cargo.toml
api/rtltcp/src/: main.rs
api/rust/: README.md
api/rust/src/: lib.rs
examples/sdr-weather/: README.md
website/: bun.lockb  package-lock.json  package.json
website/public/: index.html
website/src/css/: index.css  terminal.css
website/src/js/: IdeaGen.jsx  Terminal.jsx
