[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waveband"
dynamic = ["version"]
description = 'A library to interface with the Waveband TCP API'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "Craig Giles", email = "me@craigg.dev" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Issues = "https://github.com/CragglesG/waveband/issues"
Source = "https://github.com/CragglesG/waveband/tree/main/libs/python"

[tool.hatch.version]
path = "src/waveband/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/waveband tests}"

[tool.coverage.run]
source_pkgs = ["waveband", "tests"]
branch = true
parallel = true
omit = ["src/waveband/__about__.py"]

[tool.coverage.paths]
waveband = ["src/waveband", "*/waveband/src/waveband"]
tests = ["tests", "*/waveband/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
